--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,21 +1,24 @@
-body {
+* {
   margin: 0;
+  padding: 0;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-align: center;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 table {
   align-items: center;
   margin-inline: 300px;
+  min-width: 250px;
 
   display: flex;
   flex-direction: column;
@@ -24,7 +27,9 @@ table {
 }
 
 th {
-  /* text-align: center; */
+  text-align: center;
+  overflow: auto;
+  border: 1px solid #000;
 }
 
 td {
