--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,9 @@
 * {
   margin: 0;
   padding: 0;
+  /* background-color: #37559d; */
+  background-image: -moz-linear-gradient(top, #31b697 0);
+  background-image: -webkit-gradient(linear, left top, left bottom);
 }
 
 .showMobile {
@@ -78,6 +81,7 @@ td > a:first-child {
 .contact-form-container {
   padding:0 25%;
   /* width: 90vw; */
+  border: 0.5px solid black;
 }
 
 .contact-form-container h1 {
