--- a/client/src/index.css
+++ b/client/src/index.css
@@ -80,7 +80,7 @@ td > a:first-child {
 
 .contact-form-container {
   padding:0 25%;
-  /* width: 90vw; */
+  width: 90vw;
   border: 0.5px solid black;
 }
 
@@ -88,4 +88,46 @@ td > a:first-child {
   text-align: center;
   margin-top: 2vw;
   margin-bottom: 2vw;
+}
+
+.form-text-label {
+  margin-right: 2vw;
+}
+
+.landing-page-logo-header {
+  display: flex;
+}
+
+.landing-page-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 90vh;
+}
+
+.landing-page-logo {
+  height: 10vh;
+}
+
+.landing-page-header {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 10vh;
+  justify-content: center;
+  font-family: 'Dancing Script', cursive;
+  font-size: 3.0em;
+  font-weight: bold;
+  text-align: center;
+}
+
+.landing-page-title {
+  margin: 1vw;
+  font-size: 6.0em;
+}
+
+.landing-page-link {
+  text-decoration: none;
+  color: black;
 }
